style/style.css
/* ... */
.parceiros-container {
    height: 40vh;
    background-color: #e2a9f1;
    padding-bottom: 10px;
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 40px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.parceiros-cards-container {
    height: 60%;
    width: 100%;
    margin-top: 40px;
    margin-bottom: 20px;
    padding: 0px;
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    gap: 20px;
}

.card-parceiro {
    background-color: white;
    width: 100%;
    height: 100%;
    margin: auto;
    border-radius: 20px;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}

.card-parceiro:hover img {
    cursor: pointer;
    transform: scale(1.15);
}

.card-parceiro img {
    height: 80%;
    width: 80%;
    object-fit: cover;
    transition: transform 0.4s ease;
}

.title-parceiros {
    font-family: "Roca-Two";
    font-size: 40px;
    font-weight: bold;
    color: #a94b7c;
    margin: 0px;
    display: flex;
    justify-content: center;
    align-items: center;
}body {
    background-color: #f7d8ff;
    margin: 0;
    font-family: "Alice";
}

/* ================= Fontes =================  */

@font-face{
    font-family: "Alice";
    src: url("../Fonts_Tasso/Alice/Alice-Regular.ttf");
}

@font-face{
    font-family: "Roca-Two";
    src: url("../Fonts_Tasso/roca-two-regular-maisfontes.e2ac/roca-two-regular.ttf");
}

/* ================= sobre nós/ que somos ================= */

.sobrenos {
    display: flex;
    align-items: center;
    gap: 40px;
    background-color: #e2a9f1;
    border-radius: 10px;
    padding: 40px;
    flex-wrap: wrap;
}

.sobrenos figure {
    margin: 0;
    flex: 1 1 300px;
}

.sobrenos img {
    width: 100%;
    height: auto;
    object-fit: cover;
    border-radius: 10px;
}

.texto_tasso {
    max-width: 500px;
    flex: 1 1 300px;
}

.titulo_sobrenos {
    font-size: clamp(40px, 6vw, 100px);
    color: #a94b7c;
    line-height: 1.1;
    margin: 10px 0;
    font-family: "Roca-Two";
}

/* ================= galeira de fotos ================= */

.galeria {
    display: flex;
    align-items: center;
    gap: 40px;
    padding: 40px;
    flex-wrap: wrap;
}

.galeria figure {
    margin: 0;
    flex: 1 1 300px;
}

.galeria img {
    width: 100%;
    height: auto;
    object-fit: cover;
    border-radius: 10px;
}

.galeria_texto {
    font-size: clamp(40px, 7vw, 120px);
    font-weight: bold;
    line-height: 1;
    color: #a94b7c;
    max-width: 500px;
    font-family: "Roca-Two";
    flex: 1 1 300px;
    
}

/* ============================ MOBILE ==============================*/
@media (max-width: 768px) {
    .sobrenos,
    .galeria {
        flex-direction: column; 
        text-align: center;
        padding: 20px;
    }

    .galeria {
        display: flex;
        flex-direction: column-reverse;
    }

    .galeria_texto br {
        display: none;
    }
}

